kyy-k8s-config/dev/app/backend/go-page/go-page-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: go-page
  name: go-page
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "zckjpx.kuaixuezaixian.com,caishidian.kuaixuezaixian.com"
spec:
  # 不用动,会影响业务
  rules:
    - host: "www.kuaixuezaixian.com"
      http:
        paths:
          - backend:
              serviceName: go-page
              servicePort: 80
            path: /page
